linkColor & spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ img {
 }
 
 .my-text a {
-  color: skyblue;
+  color: blue;
 }
 
 .my-text code {
